--- a/eclipse/org.imixs.eclipse.bpmn2/plugin.xml
+++ b/eclipse/org.imixs.eclipse.bpmn2/plugin.xml
@@ -22,6 +22,8 @@
       <!-- oder CustomElementFeatureContainer  MyTaskFeatureContainer 
        org.imixs.bpmn.propertytab.application org.imixs.bpmn.propertytab.mail
       -->
+      
+    
       <customTask
             category="Imixs-Workflow"
             description="A Workflow Task describes the process performed by a human user. The task is managed by the Imixs-Workflow Engine and provides properties which are describing the status of this task inside the Workflow Engine."
@@ -40,9 +42,11 @@
                value="0">
          </property>
       </customTask>
+     
+      
       
       <!--  
-      -->
+   
        <customTask
              category="Imixs-Workflow"
              description="The Workflow Event describes the activities to be processed by the Imixs-Workflow Engine when this event is triggered. A Workflow Event can be triggered by a human user or an external event like a timer event."
@@ -60,10 +64,10 @@
                 value="0">
           </property>            
       </customTask>
+         -->
       
       
-      
-      <!-- Activity Tabs -->
+      <!-- Activity Tabs
 	  <propertyTab
             class="org.imixs.bpmn.ui.event.WorkflowPropertySection"
             id="org.imixs.bpmn.propertytab.event.workflow"
@@ -120,7 +124,7 @@
             runtimeId="org.imixs.workflow.bpmn.runtime"
             type="org.eclipse.bpmn2.CatchEvent">
       </propertyTab>
-
+ -->
       
       <!-- Process Tabs -->
       <propertyTab
@@ -141,7 +145,7 @@
             runtimeId="org.imixs.workflow.bpmn.runtime"
             type="org.eclipse.bpmn2.Task">
       </propertyTab>
-        
+       
 	 
        
        
